# binary_viz

./: CMakeLists.txt  main.c
test/: short.txt
